# Automated-YouTube-Mixtape-Creation

./: .env.example  .gitignore  AboutProject.txt  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py  deps.py  main.py
app/api/dto/: __init__.py  requests.py  responses.py
app/api/routers/: __init__.py  files.py  health.py  jobs.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/domain/: __init__.py  models.py  schemas.py
app/infrastructure/: __init__.py
app/infrastructure/media/: __init__.py  ffmpeg_runner.py  pydub_adapter.py
app/infrastructure/repositories/: __init__.py  job_store.py
app/infrastructure/storage/: __init__.py  local_store.py  path_manager.py
app/services/: __init__.py
app/services/audio/: __init__.py  discovery.py  mixer.py
app/services/metadata/: __init__.py  description.py
app/services/pipeline/: __init__.py  mixtape_orchestrator.py
app/services/video/: __init__.py  image_video.py
app/ui/: __init__.py  api_client.py  streamlit_app.py
app/ui/components/: __init__.py  output_preview.py  progress_panel.py  upload_widget.py
app/ui/pages/: 1_upload.py  2_configure.py  3_generate.py  4_results.py
docs/: appsreenshots.md
experiment_notebooks/: experiment1.ipynb  logic.py
scripts/: run_api.sh  run_ui.sh  smoke_test_pipeline.py
tests/: conftest.py
tests/integration/: test_api_jobs.py
tests/unit/: test_description.py  test_image_video.py  test_mixer.py  test_orchestrator.py
