[project]
name = "automated-youtube-mixtape-creation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "fastapi>=0.135.1",
    "ffmpeg>=1.4",
    "ipykernel>=7.2.0",
    "moviepy>=2.2.1",
    "pydub>=0.25.1",
    "streamlit>=1.55.0",
]
